fixed sign up block alignment

--- a/applications/hw4/static/css/signin_login_reg.css
+++ b/applications/hw4/static/css/signin_login_reg.css
@@ -1,18 +1,16 @@
 
 main.white {
     background-color: #5b96e9;
-    overflow-y: auto;
-    overflow-x:hidden;
+    overflow:hidden;
 }
 
 div.main_content_slr {
-    margin: 0;
-    position: absolute;
+    margin: 50px;
+    margin-left:20%;
     top: 40%;
     left: 50%;
     width: 60%;
     padding: 30px;
-    transform: translate(-50%, -50%);
     border: 3px solid black;
     border-radius: 25px;
     background-color: white;
